src/components/about_us/about-us.css
/* variables */
/* variables end */
/* mixins */
/* rem unit mixin */
/* flex Sass mixin */
/* mixins end */
.about-us-section {
  padding: 5.5rem 0 0; }
  @media (min-width: 992px) {
    .about-us-section {
      padding: 4.5rem 0 0; } }
  .about-us-section .about-us-top-section {
    padding: 0 0.5rem; }
    @media (min-width: 992px) {
      .about-us-section .about-us-top-section {
        padding: 0 1.25rem; } }
  .about-us-section h2 {
    font-size: 2.25rem;
    line-height: 2.625rem;
    color: #1c1c1c;
    margin-bottom: 2.5rem; }
    @media (min-width: 992px) {
      .about-us-section h2 {
        font-size: 3rem;
        line-height: 3.5rem; } }
  .about-us-section .tag-line-box {
    border: 0.5rem solid #fff;
    padding: 0.25rem 1rem; }
    @media (min-width: 992px) {
      .about-us-section .tag-line-box {
        max-width: 34.5rem;
        margin: 0 auto; } }
    .about-us-section .tag-line-box span {
      font-size: 1.125rem;
      line-height: 1.5rem;
      color: #1c1c1c;
      font-weight: 600; }
      @media (min-width: 992px) {
        .about-us-section .tag-line-box span {
          font-size: 1.375rem;
          line-height: 2rem; } }
  .about-us-section p {
    font-size: 1rem;
    line-height: 1.375rem;
    color: #1c1c1c;
    margin: 1.5rem 0; }
    @media (min-width: 992px) {
      .about-us-section p {
        margin: 2.5rem 0; } }

.programs-slider-wrapper {
  margin-bottom: 3rem; }
  @media (min-width: 992px) {
    .programs-slider-wrapper .slick-list {
      padding: 0 0 0 10% !important; } }
  .programs-slider-wrapper .slick-slide {
    border-right: 1px solid #d5d5d5; }
    .programs-slider-wrapper .slick-slide:last-child {
      border-right: none; }
  .programs-slider-wrapper .slider-item {
    padding: 0 1rem; }
    .programs-slider-wrapper .slider-item h3 {
      font-size: 1.5rem;
      line-height: 2.25rem;
      color: #1c1c1c; }
    .programs-slider-wrapper .slider-item .img-wrapper {
      box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.161);
      border-radius: 0.75rem;
      width: 11.25rem;
      height: 11.25rem; }
      .programs-slider-wrapper .slider-item .img-wrapper img {
        width: 100%;
        border-radius: 0.75rem; }
    .programs-slider-wrapper .slider-item p {
      font-size: 1rem;
      line-height: 1.25rem; }
      @media (min-width: 992px) {
        .programs-slider-wrapper .slider-item p {
          font-size: 0.875rem; } }

.gallery-slider-wrapper {
  background-color: #fff;
  padding: 3rem 0 5rem 1.5rem; }
  @media (min-width: 768px) {
    .gallery-slider-wrapper {
      padding: 3rem 0 5.5rem 3rem; } }
  @media (min-width: 1200px) {
    .gallery-slider-wrapper {
      padding: 3rem 0 5.5rem 6.875rem; } }
  .gallery-slider-wrapper > h2 {
    font-size: 2rem;
    line-height: 2.25rem;
    color: #1c1c1c; }
    @media (min-width: 992px) {
      .gallery-slider-wrapper > h2 {
        font-size: 3.125rem;
        line-height: 3.6875rem;
        margin: 1.5rem 0 2rem; } }
  .gallery-slider-wrapper .slick-list {
    padding: 0 0 0 27% !important; }
  .gallery-slider-wrapper .slick-slider .slick-dots {
    bottom: -2.8125rem; }
    .gallery-slider-wrapper .slick-slider .slick-dots li button::before {
      font-size: 0.625rem; }
    .gallery-slider-wrapper .slick-slider .slick-dots li.slick-active button::before {
      font-size: 1rem;
      color: #e86055; }
  .gallery-slider-wrapper .gallery-item {
    padding: 0.5rem 0; }
    @media (min-width: 992px) {
      .gallery-slider-wrapper .gallery-item {
        padding: 0; } }
    .gallery-slider-wrapper .gallery-item .gallery-img-wrapper {
      background-color: #fff;
      border-radius: 0.5rem;
      box-shadow: 0px 3px 8px rgba(0, 0, 0, 0.098);
      width: 12.6875rem;
      height: 12.6875rem; }
      .gallery-slider-wrapper .gallery-item .gallery-img-wrapper img {
        width: 100%;
        border-radius: 0.5rem;
        padding: 0.5rem; }

